--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
   "devDependencies": {
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
+  },
+  "dependencies": {
+    "common-env": "^6.1.0",
+    "hapi": "^17.4.0",
+    "hiredis": "^0.5.0",
+    "redis": "^2.8.0",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
+    "uws": "^10.148.0"
   }
 }
