--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "dependencies": {
     "common-env": "^6.1.0",
     "hapi": "^17.4.0",
+    "hapi-swagger": "^9.1.1",
     "hiredis": "^0.5.0",
+    "inert": "^5.1.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
-    "uws": "^10.148.0"
+    "uuid": "^3.2.1",
+    "uws": "^10.148.0",
+    "vision": "^5.3.2"
   }
 }
