--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hapi-swagger": "^9.1.1",
     "hiredis": "^0.5.0",
     "inert": "^5.1.0",
+    "node-fetch": "^2.1.2",
     "redis": "^2.8.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
